index.css
body {
    /* height: 100vh; */
    color: #4A5568;
    margin: 0;
    font-family: sans-serif;
    display: flex;
    flex-direction: column;
}

.header {
    background-color: #EBD3A7;
    display: flex;
    align-items: center; 
    padding: 10px 10px 10px 10px;
}

.header img {
    height: 50px;
    width: 50px;
    clip-path: circle();
}
.header> .right-links {
    margin: 0 0 0 auto;
}

.header ul {
    display: flex;
    gap: 8px;
    list-style: none;
    margin: 0px 0px 0px 0px;
    padding: 0px 0px 0px 0px;
}

.layer {
    display: flex;
    justify-content: center;
    height: 500px;
}

.layer--one {
    background-color: #A3D9C9;
    height: 300px;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-around;
    padding: 0px 20px 0px 20px;
}

@media screen and (max-width: 480px) {
    .layer--one {
        height: 500px;
    }
}

.layer--one .left-side {
    display: flex;
    flex-direction: column;
    justify-content: start;
    flex-grow: 1;
    flex-basis: 160px;
    max-width: fit-content;
}

.layer--one .left-side button{
    align-self: baseline;
}
.layer--one img {
    width: 250px;
    height: 250px;
}

.layer--two {
    background-color: #F5F5F5;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}


.layer--three {
    background-image: url("images/lofi-summer4.jpg");
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    color: #fff;
    font-size: 50px;
    font-weight: bold;
    
    justify-content: center;
    align-items: center;
}

.layer--four {
    background-color: #A3D9C9;
    justify-content: center;
    align-items: center;

    height:300px;
}

button {
    background-color: #F28C8C;
    border: none;
    color: #fff;
    border-radius: 5px;
    padding: 10px;
    margin: 20px 0px 0px 0px;
}

button:hover {
    background-color: #fff;
    color:#F28C8C
}

button:active {
    transform: scale(0.95);
}

.footer {
    display: flex;
    justify-content: center;
    background-color: #EBD3A7;
    /* margin: auto 0 0 0; */
}

h2 {
    margin: 0px 0px 0px 0px;
}

p {
    margin: 0px 0px 0px 0px;
}

a {
    color:#4A5568;
    text-decoration: none;
}

a:hover {
    color: #fff;
}

